--- a/language.html
+++ b/language.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <title>Character Builder</title>
+    <title>Language Suggester</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/scripts.js"></script>
 </head>
