--- a/language.html
+++ b/language.html
@@ -13,13 +13,13 @@
     <h2>Hey you! You wanna learn how to code?</h2>
     <h3>Well you came to the right place!</h3>
     <form id="questions">
-        <h2>Let's Start off with a few simple questions.</h2>
+        <p><strong>Let's Start off with a few simple questions.</strong></p>
 
-        <h3>What is your name?</h3>
+        <p><strong>What is your name?</strong></p>
         <label for="nameInput"></label>
         <input id="nameInput" type="text" name="nameInput">
 
-        <h3>Second, do you like to be in the front of the line or the back of the line?</h3>
+        <p><strong>Second, do you like to be in the front of the line or the back of the line?</strong></p>
         <label>
             <input type="radio" name="frontBack" value="front">
             Front
@@ -29,7 +29,7 @@
             Back
         </label>
 
-        <h3>Next, what is your favorite English parts of speech</h3>
+        <p><strong>Next, what is your favorite English parts of speech</strong></p>
         <label>
             <input type="radio" name="partSpeech" value="noun">
             Noun
@@ -43,11 +43,11 @@
             Verb
         </label>
 
-        <h3>If you were to pick a number between 1 and 10, what number would you pick?</h3>
+        <p><strong>If you were to pick a number between 1 and 10, what number would you pick?</strong></p>
         <label for="numberInput"></label>
         <input id="numberInput" type="text" name="numberInput">
 
-        <h3>Lastly, how much coding experience do you have? What title would you give yourself?</h3>
+        <p><strong>Lastly, how much coding experience do you have? What title would you give yourself?</strong></p>
         <select id="experience">
             <option value="1">Beginner (0-2 years)</option>
             <option value="2">Intermediate (2-3 years)</option>
@@ -56,11 +56,11 @@
         <button type="submit" class="btn">Show me the results!</button>
 
         <div id="result" class="hidden">
-            <h2>Here is my language suggestion for you <span id="survey">____</span>!</h2>
-            <h3>According to your answers, you should consider:
-                <p id="output1a"></p>
-                <p>So go try out  <span id="output1b"></span> for <span id="time"></span> day(s)!</p>
-            </h3>
+            <p><strong>Here is my language suggestion for you <span id="survey">____</span>!</strong></p>
+                <p>According to your answers, you should consider:
+                <p id="output1a"></strong></p>
+                <p>So go try out <span id="output1b"></span> for <span id="time"></span> day(s)!</p>
+            </p>
         </div>
     </form>
 </body>
